--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-
-<meta charset="EUC-KR">
-
-<title>웹서버 테스트</title>
-
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+<title>Insert title here</title>
 </head>
-
 <body>
-
-안녕~~~~
-
+	<form method=post class="SearchInput" action="/lol_analysis_test/01/getUserid.jsp" autocomplete="off">
+		<input type="text" name="userName" class="Summoner"
+			placeholder="name">
+		<button type="submit" class="Button">
+			검색
+		</button>
+</form>
 </body>
-
 </html>
